k8s/hello/deployment-probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellok8s-deployment
spec:
  strategy: 
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 3
  selector:
    matchLabels:
      app: hellok8s
  template:
    metadata:
      labels:
        app: hellok8s
    spec:
      containers:
        - image: aaasayok/hellok8s:bad
          name: hellok8s-container
          readinessProbe:  # livenessProbe
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3  # initialDelaySeconds 首次探测前等待3s
            successThreshold: 5  # 每隔 3 秒执行一次存活探测
